# GELATO

./: .gitignore  CMakeLists.txt  IIP.py  LICENSE  Makefile  PSfunctions.py  README.md  SectionParameters.py  Trajectory_Optimization-3DoF-LG.ipynb  Trajectory_Optimization-6DoFquat-LG.ipynb  Trajectory_Optimization.py  Trajectory_Optimization_3DoF.py  USStandardAtmosphere.py  USStandardAtmosphere_p.py  Zero-20220221-events.csv  Zero-20220221-settings.json  Zero-20220221-solveroption.json  Zero-east-events.csv  Zero-east-settings.json  Zero-new-events.csv  Zero-new-settings.json  Zero-new-solveroption.json  _user_constraints_empty.py  atmosphere_casadi.py  ca.csv  constraints.py  constraints_a.py  constraints_b.py  constraints_c.py  constraints_d.py  constraints_e.py  constraints_u.py  coordinate.py  coordinate_casadi.py  dynamics.py  dynamics_casadi.py  dynamics_p.py  iip_casadi.py  initialize.py  initialize_output.py  (+12 more)
.github/workflows/: reviewdog.yaml
ALMA/: ZERO_NOMINAL_2201.csv  ZERO_NoWind_LEO200km_ALMA_20220104_90deg.csv  ZERO_SDR_LEO200km_ALMA_20220104_1.csv  ZERO_SDR_LEO200km_ALMA_20220104_1.inp  ZERO_SDR_LEO200km_ALMA_20220104_2.csv  ZERO_SDR_LEO200km_ALMA_20220104_2.inp  ZERO_SDR_LEO200km_ALMA_20220104_3.csv  ZERO_SDR_LEO200km_ALMA_20220104_3.inp  ZERO_SDR_LEO200km_ALMA_20220104_4.csv  ZERO_SDR_LEO200km_ALMA_20220104_4.inp  ZERO_SDR_LEO200km_ALMA_20220104_90deg_NoOptimization.csv  opt_ascent_nom.csv
example/: example-CA.csv  example-events.csv  example-settings.json  example-trajectory_init.csv  example-wind_average.csv  user_constraints.py
examples/: Zero-east-settings.json  user_constraints.py  wind_ALMA.csv
lib/: IIP.py  PSfunctions.py  SectionParameters.py  USStandardAtmosphere.py  con_aero.py  con_dynamics.py  con_init_terminal_knot.py  con_trajectory.py  con_user.py  con_waypoint.py  coordinate.py  cost_gradient.py  downrange.py  dynamics.py  jac_fd.py  usercon_tools.py  utils.py
src/: Air.cpp  Air.hpp  Coordinate.cpp  Coordinate.hpp  Earth.cpp  Earth.hpp  gravity.cpp  gravity.hpp  iip.cpp  iip.hpp  pybind_IIP.cpp  pybind_USStandardAtmosphere.cpp  pybind_coordinate.cpp  pybind_dynamics.cpp  pybind_utils.cpp  wrapper_air.hpp  wrapper_coordinate.hpp  wrapper_utils.hpp
tools/: IIP.py  IIP_p.py  downrange.py  dynamics.py  make_kml.py  plot_output.py  settings_editor.py
tools/static/: editor.html
